--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    <title>ChickwensRule</title>
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
-    
+    <p>This site is currently unavailable. Please check back later!</p>
 </body>
 </html>
