--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
-    <title>ChickwensRule</title>
+    <title>ChickwensRule's Portfolio</title>
     <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
-    <p>This site is currently unavailable. Please check back later!</p>
+    <nav>
+        <img src="images/chicken.jpeg" alt="" width="50px" height="50px">
+
+        <ul>
+            <li>
+                <a href="#home">Home</a>
+            </li>
+
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
