--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 
     <title>ChickwensRule's Portfolio</title>
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <nav>
-        <img src="images/chicken.jpeg" alt="" width="50px" height="50px">
+        <img src="chicken.jpeg" alt="" width="50px" height="50px">
 
         <ul>
             <li>
