feat: less padding navbar

--- a/index.html
+++ b/index.html
@@ -27,5 +27,20 @@
             </li>
         </ul>
     </nav>
+
+
+    <div id="wrapper">
+        <section>
+
+        </section>
+
+        <section>
+
+        </section>
+
+        <section>
+            
+        </section>
+    </div>
 </body>
 </html>
