feat: create sections

--- a/index.html
+++ b/index.html
@@ -30,16 +30,22 @@
 
 
     <div id="wrapper">
-        <section>
+        <section id="home">
+            <h2>Home</h2>
 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.</p>
         </section>
 
-        <section>
+        <section id="projects">
+            <h2>Projects</h2>
 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ut, et corrupti in odit dicta. Iste nam laudantium eligendi at temporibus adipisci voluptatum? Veritatis, eligendi aspernatur explicabo possimus doloribus porro?</p>
         </section>
 
-        <section>
-            
+        <section id="contact">
+            <h2>Contact</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla molestias ipsa obcaecati minima mollitia doloremque eos beatae dolor quisquam dolorem, porro iure tempora corporis, tempore qui rem facere saepe pariatur.</p>
         </section>
     </div>
 </body>
