--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
+    <header>        
+        <h2>ChickwensRule's Portfolio</h2>
+        <!-- <p>ChickwensRule's Portfolio</p> -->
+        <p>&#169; 2022 ChickwensRule</p>
+    </header>
+
     <nav>
         <img src="chicken.jpeg" alt="" width="50px" height="50px">
 
@@ -33,19 +39,47 @@
         <section id="home">
             <h2>Home</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+            </p>
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ut, et corrupti in odit dicta. Iste nam laudantium eligendi at temporibus adipisci voluptatum? Veritatis, eligendi aspernatur explicabo possimus doloribus porro?</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+            </p>
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla molestias ipsa obcaecati minima mollitia doloremque eos beatae dolor quisquam dolorem, porro iure tempora corporis, tempore qui rem facere saepe pariatur.</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor voluptatibus nulla recusandae quis ratione harum atque officiis, error porro doloribus. Nisi aliquid eligendi dignissimos, consectetur accusamus pariatur tempore nesciunt.
+            </p>
+
         </section>
     </div>
 </body>
