--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <header>        
+    <!-- <header>        
         <h2>ChickwensRule's Portfolio</h2>
-        <!-- <p>ChickwensRule's Portfolio</p> -->
+        <p>ChickwensRule's Portfolio</p>
         <p>&#169; 2022 ChickwensRule</p>
-    </header>
+    </header> -->
 
     <nav>
         <img src="chicken.jpeg" alt="" width="50px" height="50px">
