--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header> -->
 
     <nav>
-        <img src="chicken.jpeg" alt="" width="50px" height="50px">
+        <img src="chicken.jpeg" alt="Icon" width="50px" height="50px" draggable="false">
 
         <ul>
             <li>
